[gd_scene load_steps=17 format=2]

[ext_resource path="res://sence/level/level_area.tscn" type="PackedScene" id=1]
[ext_resource path="res://sence/lanten.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/secret.gd" type="Script" id=3]
[ext_resource path="res://src/spike.gd" type="Script" id=4]
[ext_resource path="res://src/unstable_paltform.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 138 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 108, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 252, 6 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 12, 12 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 36 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 60, 12 )

[sub_resource type="SegmentShape2D" id=10]
b = Vector2( 168, 0 )

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( 0, -1 )
b = Vector2( 36, -1 )

[sub_resource type="SegmentShape2D" id=11]
b = Vector2( 120, 0 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 36, 3 )

[sub_resource type="RectangleShape2D" id=13]

[node name="collision" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [ 600.0, 1200.0, 1800.0 ],
"_edit_vertical_guides_": [ 1020.0, 2040.0, 3060.0, 4080.0 ]
}

[node name="ground_and_spike" type="Node2D" parent="."]
position = Vector2( 0, 24 )
__meta__ = {
"_edit_horizontal_guides_": [ 600.0, 1200.0, 1800.0 ],
"_edit_vertical_guides_": [ 1020.0, 2040.0, 3060.0, 4080.0 ]
}

[node name="ground_and_wall" type="StaticBody2D" parent="ground_and_spike"]
collision_layer = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ground_and_spike/ground_and_wall"]
polygon = PoolVector2Array( 0, 1140, 0, 1176, 1668, 1176, 1668, 1140, 1644, 1140, 1644, 1128, 1620, 1128, 1620, 1140, 1584, 1140, 1584, 1152, 1572, 1152, 1572, 1164, 1500, 1164, 1500, 1152, 1500, 1116, 1500, 1092, 1524, 1092, 1524, 1068, 1573, 1068, 1573, 1056, 1632, 1056, 1632, 1068, 1668, 1068, 1668, 1032, 1692, 1032, 1692, 876, 1440, 876, 1440, 900, 1356, 900, 1356, 924, 1308, 924, 1308, 1020, 1188, 1020, 1188, 1044, 1116, 1044, 1116, 1116, 958, 1116, 958, 1092, 948, 1092, 948, 1068, 924, 1068, 924, 1092, 912, 1092, 912, 1104, 876, 1104, 876, 1116, 756, 1116, 756, 1140 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="ground_and_spike/ground_and_wall"]
polygon = PoolVector2Array( 1356, 564, 1500, 564, 1500, 804, 1380, 804, 1380, 684, 1356, 684 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="ground_and_spike/ground_and_wall"]
polygon = PoolVector2Array( 1620, 564, 2100, 564, 2100, 636, 2088, 636, 2088, 780, 2076, 780, 2076, 876, 1884, 876, 1884, 852, 1836, 852, 1836, 828, 1716, 828, 1716, 804, 1620, 804 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground_and_spike/ground_and_wall"]
position = Vector2( 1764, 1038 )
shape = SubResource( 1 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="ground_and_spike/ground_and_wall"]
polygon = PoolVector2Array( 1836, 948, 1836, 1176, 3156, 1176, 3156, 996, 3420, 996, 3420, 984, 3432, 984, 3432, 960, 3444, 960, 3444, 948, 3456, 948, 3456, 936, 3468, 936, 3468, 924, 3480, 924, 3480, 912, 3492, 912, 3492, 900, 3504, 900, 3504, 888, 3516, 888, 3516, 876, 3528, 876, 3528, 864, 3540, 864, 3540, 852, 3552, 852, 3552, 840, 3564, 840, 3564, 828, 3552, 828, 3552, 816, 3540, 816, 3540, 804, 3528, 804, 3528, 792, 3516, 792, 3516, 780, 3504, 780, 3504, 768, 3492, 768, 3492, 756, 3480, 756, 3480, 744, 3468, 744, 3468, 732, 3456, 732, 3456, 720, 3444, 720, 3444, 708, 3432, 708, 3432, 672, 3264, 672, 3264, 684, 3216, 684, 3216, 672, 3192, 672, 3192, 684, 3144, 684, 3144, 672, 2916, 672, 2916, 696, 2928, 696, 2928, 744, 2916, 744, 2916, 984, 2604, 984, 2604, 1008, 2556, 1008, 2556, 996, 2508, 996, 2508, 984, 2460, 984, 2460, 972, 2424, 972, 2424, 960, 2400, 960, 2400, 948, 2388, 948, 2388, 936, 2376, 936, 2376, 924, 2364, 924, 2364, 912, 2352, 912, 2352, 900, 2340, 900, 2340, 888, 2328, 888, 2328, 864, 2316, 864, 2316, 840, 2304, 840, 2304, 804, 2292, 804, 2292, 768, 2316, 768, 2316, 756, 2268, 756, 2268, 924, 1884, 924, 1884, 948 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="ground_and_spike/ground_and_wall"]
polygon = PoolVector2Array( 3552, 576, 3552, 588, 3564, 588, 3564, 600, 3576, 600, 3576, 612, 3588, 612, 3588, 624, 3600, 624, 3600, 636, 3612, 636, 3612, 648, 3624, 648, 3624, 660, 3636, 660, 3636, 672, 3648, 672, 3648, 684, 3660, 684, 3660, 696, 3672, 696, 3672, 708, 3684, 708, 3684, 720, 3696, 720, 3696, 732, 3708, 732, 3708, 744, 3720, 744, 3720, 756, 3732, 756, 3732, 768, 3744, 768, 3744, 780, 3756, 780, 3756, 792, 3768, 792, 3768, 804, 3780, 804, 3780, 816, 3792, 816, 3792, 828, 3804, 828, 3804, 840, 3792, 840, 3792, 852, 3780, 852, 3780, 864, 3768, 864, 3768, 876, 3756, 876, 3756, 888, 3744, 888, 3744, 900, 3732, 900, 3732, 912, 3720, 912, 3720, 924, 3708, 924, 3708, 936, 3696, 936, 3696, 948, 3684, 948, 3684, 960, 3672, 960, 3672, 972, 3660, 972, 3660, 984, 3648, 984, 3648, 996, 3636, 996, 3636, 1008, 3624, 1008, 3624, 1020, 3612, 1020, 3612, 1032, 3600, 1032, 3600, 1044, 3588, 1044, 3588, 1056, 3576, 1056, 3576, 1068, 3420, 1068, 3420, 1056, 3228, 1056, 3228, 1176, 4080, 1176, 4080, 576 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ground_and_spike/ground_and_wall"]
position = Vector2( 2712, 732 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ground_and_spike/ground_and_wall"]
position = Vector2( 3180, 582 )
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="ground_and_spike/ground_and_wall"]
position = Vector2( 3270, 1326 )
shape = SubResource( 14 )

[node name="secret" type="Node2D" parent="ground_and_spike"]

[node name="Area2D" type="Area2D" parent="ground_and_spike/secret"]
position = Vector2( 1656, 1104 )
script = ExtResource( 3 )
secret = "/root/Node2D/Map/cover1"
tile_top_left = Vector2( 137, 89 )
tile_bottom_right = Vector2( 138, 94 )
tile_map_path = "/root/Node2D/Map/ground_and_wall/s4m_ur4i_huge-assetpack-tilemap"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground_and_spike/secret/Area2D"]
shape = SubResource( 4 )

[node name="Area2D2" type="Area2D" parent="ground_and_spike/secret"]
position = Vector2( 1560, 792 )
script = ExtResource( 3 )
secret = "/root/Node2D/Map/cover0"
tile_top_left = Vector2( 125, 65 )
tile_bottom_right = Vector2( 134, 66 )
tile_map_path = "/root/Node2D/Map/ground_and_wall/s4m_ur4i_huge-assetpack-tilemap"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground_and_spike/secret/Area2D2"]
shape = SubResource( 5 )

[node name="spike" type="Area2D" parent="ground_and_spike"]
collision_layer = 8
script = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ground_and_spike/spike"]
polygon = PoolVector2Array( 2292, 768, 2292, 804, 2304, 840, 2328, 888, 2400, 960, 2424, 972, 2460, 984, 2556, 1008, 2604, 1008, 2604, 1002, 2556, 1002, 2556, 990, 2508, 990, 2508, 978, 2460, 978, 2460, 966, 2424, 966, 2424, 954, 2400, 954, 2400, 942, 2388, 942, 2388, 930, 2376, 930, 2370, 924, 2370, 912, 2358, 912, 2358, 900, 2346, 900, 2346, 888, 2334, 888, 2334, 864, 2322, 864, 2322, 840, 2310, 840, 2310, 804, 2298, 804, 2298, 768 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="ground_and_spike/spike"]
polygon = PoolVector2Array( 2922, 696, 2922, 744, 2928, 744, 2928, 696 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="ground_and_spike/spike"]
polygon = PoolVector2Array( 3144, 678, 3192, 678, 3192, 684, 3144, 684 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="ground_and_spike/spike"]
polygon = PoolVector2Array( 3216, 678, 3264, 678, 3264, 684, 3216, 684 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="ground_and_spike/spike"]
position = Vector2( 36, 0 )
polygon = PoolVector2Array( 3396, 582, 3396, 576, 3516, 576, 3768, 828, 3768, 840, 3540, 1068, 3384, 1068, 3384, 1062, 3540, 1062, 3540, 1056, 3546, 1056, 3546, 1044, 3558, 1044, 3558, 1032, 3570, 1032, 3570, 1020, 3582, 1020, 3582, 1008, 3594, 1008, 3594, 996, 3606, 996, 3606, 984, 3618, 984, 3618, 972, 3630, 972, 3630, 960, 3642, 960, 3642, 948, 3654, 948, 3654, 936, 3666, 936, 3666, 924, 3678, 924, 3678, 912, 3690, 912, 3690, 900, 3702, 900, 3702, 888, 3714, 888, 3714, 876, 3726, 876, 3726, 864, 3738, 864, 3738, 852, 3750, 852, 3750, 840, 3762, 840, 3762, 828, 3750, 828, 3750, 816, 3738, 816, 3738, 804, 3726, 804, 3726, 792, 3714, 792, 3714, 780, 3702, 780, 3702, 768, 3690, 768, 3690, 756, 3678, 756, 3678, 744, 3666, 744, 3666, 732, 3654, 732, 3654, 720, 3642, 720, 3642, 708, 3630, 708, 3630, 696, 3618, 696, 3618, 684, 3606, 684, 3606, 672, 3594, 672, 3594, 660, 3582, 660, 3582, 648, 3570, 648, 3570, 636, 3558, 636, 3558, 624, 3546, 624, 3546, 612, 3534, 612, 3534, 600, 3522, 600, 3522, 588, 3510, 588, 3510, 582 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="ground_and_spike/spike"]
polygon = PoolVector2Array( 3432, 696, 3432, 708, 3552, 828, 3552, 840, 3432, 960, 3432, 972, 3438, 972, 3438, 960, 3450, 960, 3450, 948, 3462, 948, 3462, 936, 3474, 936, 3474, 924, 3486, 924, 3486, 912, 3498, 912, 3498, 900, 3510, 900, 3510, 888, 3522, 888, 3522, 876, 3534, 876, 3534, 864, 3546, 864, 3546, 852, 3558, 852, 3558, 840, 3570, 840, 3570, 828, 3558, 828, 3558, 816, 3546, 816, 3546, 804, 3534, 804, 3534, 792, 3522, 792, 3522, 780, 3510, 780, 3510, 768, 3498, 768, 3498, 756, 3486, 756, 3486, 744, 3474, 744, 3474, 732, 3462, 732, 3462, 720, 3450, 720, 3450, 708, 3438, 708, 3438, 696 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground_and_spike/spike"]
position = Vector2( 1668, 1176 )
shape = SubResource( 10 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="ground_and_spike/spike"]
polygon = PoolVector2Array( 3252, 1314, 3258, 1314, 3258, 1308, 3282, 1308, 3282, 1314, 3288, 1314, 3288, 1338, 3282, 1338, 3282, 1344, 3258, 1344, 3258, 1338, 3252, 1338 )

[node name="oneway" type="Node2D" parent="ground_and_spike"]

[node name="StaticBody2D" type="StaticBody2D" parent="ground_and_spike/oneway"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground_and_spike/oneway/StaticBody2D"]
position = Vector2( 1668, 1141 )
shape = SubResource( 8 )
one_way_collision = true

[node name="StaticBody2D2" type="StaticBody2D" parent="ground_and_spike/oneway"]
position = Vector2( 1500, 564 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground_and_spike/oneway/StaticBody2D2"]
shape = SubResource( 11 )
one_way_collision = true

[node name="unstable_platform" type="Node2D" parent="ground_and_spike"]

[node name="Node2D" type="Node2D" parent="ground_and_spike/unstable_platform"]
position = Vector2( 3192, 1326 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="ground_and_spike/unstable_platform/Node2D"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground_and_spike/unstable_platform/Node2D/StaticBody2D"]
position = Vector2( 0, 3 )
shape = SubResource( 12 )
one_way_collision = true

[node name="Area2D" type="Area2D" parent="ground_and_spike/unstable_platform/Node2D"]
visible = false
collision_layer = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground_and_spike/unstable_platform/Node2D/Area2D"]
shape = SubResource( 13 )

[node name="collapse_timer" type="Timer" parent="ground_and_spike/unstable_platform/Node2D"]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="recovery_timer" type="Timer" parent="ground_and_spike/unstable_platform/Node2D"]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="lanterns" type="Node2D" parent="."]

[node name="Area2D" parent="lanterns" instance=ExtResource( 2 )]
position = Vector2( 2231, 752 )
type = 1

[node name="Area2D2" parent="lanterns" instance=ExtResource( 2 )]
position = Vector2( 2559, 724 )
type = 1

[node name="Area2D3" parent="lanterns" instance=ExtResource( 2 )]
position = Vector2( 2872, 817 )
type = 1

[node name="Area2D4" parent="lanterns" instance=ExtResource( 2 )]
position = Vector2( 3618, 858 )
type = 1

[node name="Area2D5" parent="lanterns" instance=ExtResource( 2 )]
position = Vector2( 3408, 1044 )
type = 1

[node name="levels" type="Node2D" parent="."]
visible = false

[node name="0" parent="levels" instance=ExtResource( 1 )]
position = Vector2( 0, 600 )
spawn_point = Vector2( 200, 1100 )

[node name="1" parent="levels" instance=ExtResource( 1 )]
position = Vector2( 1020, 600 )
spawn_point = Vector2( 1050, 1075 )

[node name="1-1" parent="levels" instance=ExtResource( 1 )]
position = Vector2( 1020, 0 )
spawn_point = Vector2( 1050, 1075 )

[node name="1-2" parent="levels" instance=ExtResource( 1 )]
position = Vector2( 2040, 0 )
spawn_point = Vector2( 1050, 1075 )

[node name="2" parent="levels" instance=ExtResource( 1 )]
position = Vector2( 2040, 600 )
spawn_point = Vector2( 2100, 900 )

[node name="3" parent="levels" instance=ExtResource( 1 )]
position = Vector2( 3060, 600 )
spawn_point = Vector2( 3096, 648 )

[node name="4" parent="levels" instance=ExtResource( 1 )]
position = Vector2( 3060, 1200 )
spawn_point = Vector2( 3100, 1300 )

[connection signal="body_entered" from="ground_and_spike/secret/Area2D" to="ground_and_spike/secret/Area2D" method="_on_somebody_enterd"]
[connection signal="body_entered" from="ground_and_spike/secret/Area2D2" to="ground_and_spike/secret/Area2D2" method="_on_somebody_enterd"]
[connection signal="body_entered" from="ground_and_spike/spike" to="ground_and_spike/spike" method="_on_spike_body_entered"]
[connection signal="body_entered" from="ground_and_spike/unstable_platform/Node2D/Area2D" to="ground_and_spike/unstable_platform/Node2D" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="ground_and_spike/unstable_platform/Node2D/collapse_timer" to="ground_and_spike/unstable_platform/Node2D" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="ground_and_spike/unstable_platform/Node2D/recovery_timer" to="ground_and_spike/unstable_platform/Node2D" method="_on_recovery_timer_timeout"]
